tests/success/lets/CyclicConstants.vix
f x = case c of
  MyType c _ -> addInt x c

type myType = MyType int (int -> int)

c =
  let g x = f x
  MyType 42 g

main = printInt (f 1)
