tests/type-error/lets/Cyclic2.vix
g : Unit -> Int
g _ = f

f : Int
f = g MkUnit

main = printInt f
